--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </main>
         <footer>
-            <p>© 2025 Budget Calculator - All rights reserved</p>
+            <p>© 2025 Budget Calculator - All rights reserved to ~ KING DONOVAN ~</p>
         </footer>
     </div>
 
